[project]
name = "ot-tutorials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "keras>=2.14.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pot>=0.9.5",
    "tensorflow>=2.14.0",
]
